@@ -16,7 +16,8 @@ Fixes:
 	Adding an edge with a label to a digraph now works again;
 	Deleting an edge of a hypergraph now deletes its attributes;
 	Node attributes on hypergraphs work now;
-	Checking for node equality correctly in find_cycle.
+	Checking for node equality correctly in find_cycle;
+	Avoiding errors caused by deep recursion on many algorithms (Issue 66).
 
 
 Release 1.6.3	[Dec 13, 2009]
